syntax = "proto3";

package push;
option go_package = "./pb";

message Empty {}

message PingResp{
  string msg = 1;
}

message PushOneMsgToUserReq{
  int64 userId = 1;
  int64 seq = 2;
  string msg = 3;
}

message PushOneMsgToUserRes{
}

service push {
  rpc ping (Empty) returns (PingResp);
  rpc pushOneMsgToUser (PushOneMsgToUserReq) returns (PushOneMsgToUserRes);
}